`Update theme styles and fonts in theme-style.css`

--- a/css/theme-style.css
+++ b/css/theme-style.css
@@ -28,14 +28,14 @@
   --theme-bg-dark-color: #141416;
   --theme-bg-dark2-color: #1a1a1c;
   --theme-border-light-color: #2c2c2e;
-  --theme-typography-body-font-family: 'Poppins', sans-serif;
-  --theme-typography-secondory-font-family: 'Syne', sans-serif;
-  --theme-typography-h1-font-family: 'Syne', sans-serif;
-  --theme-typography-h2-font-family: 'Syne', sans-serif;
-  --theme-typography-h3-font-family: 'Syne', sans-serif;
-  --theme-typography-h4-font-family: 'Syne', sans-serif;
-  --theme-typography-h5-font-family: 'Syne', sans-serif;
-  --theme-typography-h6-font-family: 'Syne', sans-serif;
+  --theme-typography-body-font-family: 'Noto Serif', serif;
+  --theme-typography-secondory-font-family: 'Noto Serif', serif;
+  --theme-typography-h1-font-family: 'Noto Serif', serif;
+  --theme-typography-h2-font-family: 'Noto Serif', serif;
+  --theme-typography-h3-font-family: 'Noto Serif', serif;
+  --theme-typography-h4-font-family: 'Noto Serif', serif;
+  --theme-typography-h5-font-family: 'Noto Serif', serif;
+  --theme-typography-h6-font-family: 'Noto Serif', serif;
   --logo-desktop-height: 40px;
   --logo-tablet-height: 35px;
   --logo-mobile-height: 30px;
@@ -43,7 +43,7 @@
 }
 
 
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Syne:wght@400;500;600;700;800&display=swap');
 
 /* ------------------------
