--- a/css/shortcodes.css
+++ b/css/shortcodes.css
@@ -192,7 +192,7 @@ a.white-btn:focus, .white-btn:focus { background-image: linear-gradient(135deg, 
 .featured-item.style-2:hover .featured-icon i { color: var(--theme-primary-color); }
 .featured-item.style-2 span { position: absolute; right: 5px; top: 5px; background-image: linear-gradient(135deg, var(--theme-primary-color), var(--theme-secondary-color)); width: 30px; height: 30px; display: flex; justify-content: center; align-items: center; font-weight: 700; font-size: 16px; border-radius: 50%; color: var(--theme-white-color); }
 
-.featured-item.style-3 { position: relative; background: linear-gradient(267.18deg, #161616 0%, #080808 100%); border-radius: 15px; overflow: hidden; padding: 2% 6%; }
+.featured-item.style-3 { position: relative; background: linear-gradient(267.18deg, #f7f0f0 0%, #cdbfbf 100%); border-radius: 15px; overflow: hidden; padding: 2% 6%; height: 30vh; display: flex; justify-content: center; align-items: center;}
 .featured-item.style-3 .featured-icon { margin-bottom: 10px; }
 .featured-item.style-3 .featured-icon i { font-size: 70px; line-height: 1; color: var(--theme-primary-color); }
 .featured-item.style-3::before { content: ''; position: absolute; right: -55px; top: -55px; height: 135px; width: 135px; background: var(--theme-primary-color); -webkit-filter: blur(125px); filter: blur(125px); -webkit-transition: all 0.4s ease; transition: all 0.4s ease; opacity: 0; }
