--- a/css/changes.css
+++ b/css/changes.css
@@ -269,6 +269,22 @@
   /* Counter */
   .counter-counter {
     text-align: center;
+    border: 1px solid #827a7a;
+    border-radius: 8px;
+    padding: 2%;
+    width: 250px;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+    opacity: 0;
+  transform: translateX(-50px); /* Hide elements off-screen initially */
+  transition: opacity 0.6s ease, transform 0.6s ease; /* Smooth transition */
+  }
+  .counter-counter.animate__fadeInLeft {
+    opacity: 1;
+    transform: translateX(0); /* Move elements to original position */
+  }
+  .counter-counter:hover {
+    transform: translateY(-10px);
+    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
   }
  
   /* Counter Icon */
@@ -285,9 +301,7 @@
   .counter-timer-counter {
     font-weight: 600;
     font-size: 45px;
-    color: transparent;
-    text-stroke: 2px white; /* White outline */
-  -webkit-text-stroke: 2px white;
+    color: white;
   font-weight: bold;
   }
  
