imagebanner changes done

--- a/css/ivr-automation.css
+++ b/css/ivr-automation.css
@@ -7,7 +7,7 @@
     justify-content: space-between;
     align-items: center;
     padding: 50px;
-    background-image: url("../images/Bautomate/ivr_banner.avif");
+    background-image: url("../images/bg/IVR-Automation-bannerimg.jpg");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
