--- a/css/shortcodes.css
+++ b/css/shortcodes.css
@@ -432,9 +432,9 @@ a.white-btn:focus, .white-btn:focus { background-image: linear-gradient(135deg, 
 .accordion-button:not(.collapsed) { color: var(--theme-primary-color); }
 .accordion-body { color: var(--theme-body-color); border-top: 1px solid var(--theme-border-light-color); font-family: var(--theme-typography-body-font-family); font-weight: 400; font-size: 15px; }
 
-@media(max-width:500px){
-  .featured-item{
-    margin-bottom: 4%;
+@media(max-width:700px){
+  .featured-item.style-3{
+    height: 10vh;
   }
 }
 
