--- a/css/theme-style.css
+++ b/css/theme-style.css
@@ -500,6 +500,13 @@ p { margin: 0 0 25px; }
     text-stroke: 1.5px white;
     -webkit-text-stroke: 1.5px white;
   }
+  #hb-img1{
+    display: none;
+  }
+  #hb-head{
+    font-size: 40px !important;
+    line-height: 50px !important;
+  }
 }
 
 @media screen and (max-width: 480px) {
@@ -509,4 +516,3 @@ p { margin: 0 0 25px; }
     -webkit-text-stroke: 1px white;
   }
 }
-
