--- a/css/changes.css
+++ b/css/changes.css
@@ -269,7 +269,7 @@
   /* Counter */
   .counter-counter {
     text-align: center;
-    border: 1px solid #827a7a;
+    border: 1px solid #413c3c;
     border-radius: 8px;
     padding: 2%;
     width: 250px;
