--- a/css/home.css
+++ b/css/home.css
@@ -75,7 +75,7 @@
     font-size: 32px;
   }
   .partnership-st{
-    color: grey;
+    color: #5a5a5a;
     margin: 0 9%;
     font-size: 20px;
   }
@@ -938,15 +938,14 @@
   width: 100px;
   height: 100px;
   border-radius: 50%;
-  background: radial-gradient(circle, #ffd700, #ff9f00); /* Vibrant yellow-orange gradient */
+  background: radial-gradient(circle, #090908, #3a3434);
   box-shadow: 
     0 4px 6px rgba(0, 0, 0, 0.2), /* Outer shadow */
     inset 0 -4px 8px rgba(0, 0, 0, 0.3); /* Inner shading */
   position: relative;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
   box-shadow: 
-    0 6px 12px rgba(0, 0, 0, 0.3), /* Intensified outer shadow */
-    0 0 20px rgba(255, 165, 0, 0.8); /* Outer glow effect */
+  0 6px 12px rgba(0, 0, 0, 0.3), 0 0 20px rgb(114 75 2 / 80%);
 }
 
 /* Icon Styling */
