--- a/css/changes.css
+++ b/css/changes.css
@@ -319,6 +319,18 @@
     font-size: 35px;
     font-weight: 600;
   }
+
+  @media(max-width:768px){
+    .container-counter{
+      flex-wrap: wrap;
+    }
+    .counter-counter{
+      margin-bottom: 5%;
+    }
+    .theme-title h6{
+      font-size: 25px !important;
+    }
+  }
  
   @media(max-width:500px){
     .container-counter{
