--- a/css/robotic-documented.css
+++ b/css/robotic-documented.css
@@ -321,9 +321,9 @@ body{
 
 .content-container {
     display: flex;
-    max-width: 1200px;
     gap: 30px;
-    align-items: flex-start;
+    align-items:center;
+    justify-content: center;
     flex-wrap: wrap;
 }
 
@@ -1287,6 +1287,14 @@ background-clip: text;
 .owl-carousel .owl-dots
 {
     left:45%;
+}
+@media screen and (max-width: 1024px){
+    .document-feature{
+        display: block;
+    }
+    .content-container{
+        display: block !important;
+    }
 }
 
   
