--- a/css/changes.css
+++ b/css/changes.css
@@ -1361,6 +1361,15 @@ height: 100%;
         margin-top: 5%;
   }
 }
+@media (max-width: 920px){
+  .slide-serv{
+    display: block;
+  }
+  .image-serv {
+    margin-top: 20px;
+    max-width: 100%;
+  }
+}
  
 /* Growth ,secturity last section */
 .container-growth {
