--- a/css/offshore.css
+++ b/css/offshore.css
@@ -149,7 +149,7 @@
 .why-choose-image-offshore img {
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  width: 600px;
+  width: 100%;
   height: 100%;
 }
 
@@ -442,7 +442,13 @@
   }
 
   .why-choose-grid-offshore {
-    grid-template-columns: 1fr;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+  }
+  .why-choose-image-offshore img{
+    width: 100%;
   }
 
   .services-offshore {
@@ -451,6 +457,11 @@
 
   .footer-offshore {
     padding: 15px 0;
+  }
+}
+@media (max-width: 920px){
+  .why-choose-image-offshore img{
+    width: 100%;
   }
 }
 
