--- a/css/owl.carousel.css
+++ b/css/owl.carousel.css
@@ -73,7 +73,7 @@
   .owl-center .owl-item.active.center{transform: scale(1); opacity: 1;}
 
   .owl-carousel .owl-dot { display: inline-block; margin: 0 5px; position: relative; }
-  .owl-carousel .owl-dots { width: auto; display: inline-block; padding-bottom:20px;position: absolute; line-height: 0; bottom: 0; left: 50%; transform: translateX(-50%); text-align: center; }
+  .owl-carousel .owl-dots { width: 100vw; display: inline-block; padding-bottom:20px;position: absolute; line-height: 0; bottom: 0; left: 50%; transform: translateX(-50%); text-align: center; }
   .owl-carousel .owl-dots .owl-dot span {border-radius: 50%; background: var(--theme-white-color); display: inline-block; width: 12px; height: 12px; transition: all 0.5s ease-in-out; -webkit-transition: all 0.5s ease-in-out; -o-transition: all 0.5s ease-in-out; -moz-transition: all 0.5s ease-in-out; -ms-transition: all 0.5s ease-in-out; cursor: pointer; }
   .owl-carousel .owl-dots .owl-dot:hover span, .owl-carousel .owl-dots .owl-dot.active span { background: var(--theme-primary-color);}
   
