--- a/css/home.css
+++ b/css/home.css
@@ -35,13 +35,13 @@
     top: 0;
     left: 101%;
     margin-top: 0;
-    display: block;
-    opacity: 0;
+    display: none;
+    /* opacity: 0; */
   }
   
   .dropdown-submenu:hover > .dropdown-menu-sub {
-    /* display: block; */
-    opacity: 1;
+    display: block;
+    /* opacity: 1; */
   }
   
   .h2-abt{
