--- a/css/service.css
+++ b/css/service.css
@@ -471,3 +471,10 @@ text-align: left!important;
 }
 
 
+@media screen and (min-width:834px) and (max-width:1144px) {
+  .drive-projects-img {
+    max-width: 80%!important;
+  }
+}
+ 
+
