--- a/css/about.css
+++ b/css/about.css
@@ -1,6 +1,6 @@
-body{
+/* body{
   font-family: 'Open Sans', sans-serif;
-}
+} */
 
 .partnership-section {
   padding: 3rem 0;
@@ -116,7 +116,7 @@ body{
   -webkit-background-clip: text;
   background-clip: text;
   color: transparent;
-  font-family: 'Open Sans', sans-serif;
+  /* font-family: 'Open Sans', sans-serif; */
   margin-bottom: 10px;
   letter-spacing: 1px;
 }
@@ -335,7 +335,7 @@ body{
   background: linear-gradient(45deg, #edb106, #b20d0c);
   -webkit-background-clip: text;
   background-clip: text;
-  font-family: 'Open Sans', sans-serif;
+  /* font-family: 'Open Sans', sans-serif; */
 
   color: transparent;
 }
