--- a/css/base.css
+++ b/css/base.css
@@ -172,9 +172,9 @@ a, i, .btn, button, img, span, ul, li, a:before, .dropdown-menu, .feature-icon, 
     .navbar-nav .dropdown-menu { min-width: 15em !important; max-width: 20em !important; }
     .navbar-nav .dropdown > .dropdown-menu { transform-origin: top center; transform: scaleY(0); opacity: 0; top: 100%; position: absolute; display: block; pointer-events: none; background: var(--theme-white-color); }
     .navbar-nav .dropdown:hover > .dropdown-menu { transform: scaleY(1); display: block; opacity: 1; pointer-events: auto; visibility: visible; top: 100%; -webkit-transition: all 0.5s ease-in-out 0s; -moz-transition: all 0.5s ease-in-out 0s; -ms-transition: all 0.5s ease-in-out 0s; -o-transition: all 0.5s ease-in-out 0s; transition: all 0.5s ease-in-out 0s; }
-    .navbar-nav .dropdown-menu a.active, .navbar-nav .dropdown-menu a:active, .navbar-nav .dropdown-menu a:focus, .navbar-nav .dropdown-menu a:hover { padding-left: 20px; background: none; color: var(--theme-primary-color); }
-    .nav-item.dropdown .dropdown-menu a:before { content: "\f069"; font-family: 'Line Awesome Free'; font-weight: 900; color: var(--theme-white-color); font-size: 14px; position: absolute; left: 0; top: 5px; opacity: 0; }
-    .nav-item.dropdown .dropdown-menu a.active:before, .nav-item.dropdown .dropdown-menu a:focus:before, .nav-item.dropdown .dropdown-menu a:hover:before{opacity: 1; left: 0; color: var(--theme-primary-color); animation: rotate 5s ease-in-out infinite;}
+    .navbar-nav .dropdown-menu a.active, .navbar-nav .dropdown-menu a:active, .navbar-nav .dropdown-menu a:focus, .navbar-nav .dropdown-menu a:hover { padding-left: 10px; background: none; color: var(--theme-primary-color); }
+    .nav-item.dropdown .dropdown-menu a:before {  font-family: 'Line Awesome Free'; font-weight: 900; color: var(--theme-white-color); font-size: 14px; position: absolute; left: 0; top: 5px; opacity: 0; }
+    .nav-item.dropdown .dropdown-menu a.active:before, .nav-item.dropdown .dropdown-menu a:focus:before, .nav-item.dropdown .dropdown-menu a:hover:before{opacity: 1; left: 0; color: var(--theme-primary-color);}
 }
 @media (max-width:991.98px) {
     .navbar-nav .nav-item { margin: 0;}
@@ -279,7 +279,7 @@ a, i, .btn, button, img, span, ul, li, a:before, .dropdown-menu, .feature-icon, 
 .page-breadcrumb {
     display: inline-block;
     margin-top: 15px;
-    background: rgba(255, 255, 255, 0.1);
+    
     border: 1px solid rgba(255, 255, 255, 0.2);
     padding: 7px 15px;
     border-radius: 8px;
@@ -764,3 +764,4 @@ url("../fonts/flaticon_mycollection.svg?54f7cae4c26e0f4d4f57388fb9a67e72#flatico
                transform: translateY(0);
             }
          }
+
